--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 
 {
     "name": "davyin/dyniva_flowchart",
-    "description": "admin theme for drupal.",
+    "description": "dyniva_flowchart for drupal 8 +.",
     "type": "drupal-custom-module",
     "license": "GPL-2.0-or-later",
     "homepage": "https://github.com/davyin-co/dyniva_flowchart",
